--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -11,11 +11,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}">eCommerce 2</a>
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img border="0" alt="İştebu!" src='{% static "img/istebu_logo.png" %}'>
+            </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'home' %}">Anasayfa</a></li>
                 <!-- <li><a href="{% url 'about' %}">About</a></li>
             <li><a href="{% url 'contact' %}">Contact</a></li> -->
 
