--- a/app/products/templates/products/product_list.html
+++ b/app/products/templates/products/product_list.html
@@ -18,7 +18,7 @@
     <div class='col-sm-10'>
 
         <h1>All Products
-            <small><a href='{% url "categories:categories" %}'>Categories</a></small>
+            <small><a href='{% url "categories:categories" %}'>Kategoriler</a></small>
         </h1>
 
         {% if object_list.count == 0 %}
