--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>{% block head_title %}eCommerce 2{% endblock %}</title>
+    <title>{% block head_title %}istebu! - Yaşamınızı kolaylaştırır{% endblock %}</title>
 
     {% include 'head_css.html' %}
 
