--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -84,13 +84,13 @@
 {% block content %}
 
     <div class='row'>
-        <h3>Recommended Products</h3>
+        <h3>Öne Çıkan Ürünler</h3>
         {% include "products/products.html" with object_list=products col_class_set="col-sm-2" %}
 
     </div>
 
     <div class='row'>
-        <h3>Featured Products</h3>
+        <h3>Günün Ürünleri</h3>
         {% include "products/products.html" with object_list=products2 %}
 
     </div>
