--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -23,7 +23,7 @@
 
                 <form class="navbar-form navbar-left" method="GET" role="search" action='{% url "products:products" %}'>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search" name="q"
+                        <input type="text" class="form-control" placeholder="Ara" name="q"
                                value='{{ request.GET.q }}'>
                     </div>
                     <!--  <button type="submit" class="btn btn-default">Submit</button> -->
@@ -39,27 +39,27 @@
                             id="cart-count-badge" class='badge'>{{ request.session.cart_item_count }}</span></a>
                 </li>
                 {% if request.user.is_authenticated %}
-                    <li><a href="{% url 'orders' %}">Orders</a></li>
-                    <li><a href="{% url 'auth_logout' %}">Logout</a></li>
+                    <li><a href="{% url 'orders' %}">Siparişlerim</a></li>
+                    <li><a href="{% url 'auth_logout' %}">Çıkış</a></li>
                 {% else %}
-                    <li><a href="{% url 'registration_register' %}">Register</a></li>
+                    <li><a href="{% url 'registration_register' %}">Kayıt Ol</a></li>
                     {% if not request.user.is_authenticated and not "/accounts/login" in request.get_full_path %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                               aria-expanded="false">Login <span class="caret"></span></a>
+                               aria-expanded="false">Giriş <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
 
                                 <form class='navbar-form' method='POST' action='{% url "auth_login" %}'>{% csrf_token %}
                                     <div class='form-group'>
-                                        <input type='text' class='form-control' name='username' placeholder='Username'/>
+                                        <input type='text' class='form-control' name='username' placeholder='Kullanıcı Adı'/>
                                     </div>
                                     <div class='form-group'>
                                         <input type='password' class='form-control' name='password'
-                                               placeholder='Password'/>
+                                               placeholder='Şifre'/>
                                     </div>
-                                    <button type='submit' class='btn btn-default btn-block'>Login</button>
+                                    <button type='submit' class='btn btn-default btn-block'>Giriş</button>
                                 </form>
-                                <p class='text-center'><a href='{% url "auth_password_reset" %}'>Forgot password</a>?
+                                <p class='text-center'><a href='{% url "auth_password_reset" %}'>Şifremi Unuttum</a>?
                                 </p>
 
 
