--- a/app/static_in_pro/static_for_new_theme/css/style.css
+++ b/app/static_in_pro/static_for_new_theme/css/style.css
@@ -1599,7 +1599,7 @@ img {
 
 #aa-testimonial {
     background-attachment: fixed;
-    background-image: url("../img/testimonial-bg-1.jpg");
+    /*background-image: url("../img/testimonial-bg-1.jpg");*/
     background-repeat: no-repeat;
     background-size: cover;
     display: inline;
