--- a/app/visual_site_elements/templates/visual_site_elements/sliders/single_slide.html
+++ b/app/visual_site_elements/templates/visual_site_elements/sliders/single_slide.html
@@ -8,7 +8,7 @@
         <span data-seq>{{ slide.campaign }}</span>
         <h2 data-seq> {{ slide.title }} </h2>
         <p data-seq> {{ slide.sub_title }} </p>
-        <a data-seq href="{{ slide.url }}" class="aa-shop-now-btn aa-secondary-btn">SHOP NOW</a>
+        <a data-seq href="{{ slide.url }}" class="aa-shop-now-btn aa-secondary-btn">ALIŞVERİŞE BAŞLA</a>
     </div>
 </li>
 
