product_detail sayfası ile ilgili çalışmalar başladı. quick view modal formu javascript olmadan çalışacak hale getirildi.

--- a/app/visual_site_elements/templates/visual_site_elements/menu/menu_items.html
+++ b/app/visual_site_elements/templates/visual_site_elements/menu/menu_items.html
@@ -33,7 +33,7 @@
 {#                        <li><a href="#">Pages <span class="caret"></span></a>#}
 {#                            <ul class="dropdown-menu">#}
 {#                                <li><a href="product.html">Shop Page</a></li>#}
-{#                                <li><a href="product-detail.html">Shop Single</a></li>#}
+{#                                <li><a href="product_detail.html">Shop Single</a></li>#}
 {#                                <li><a href="404.html">404 Page</a></li>#}
 {#                            </ul>#}
 {#                        </li>#}
