header menü kısmı düzeltildi...

--- a/app/visual_site_elements/templates/visual_site_elements/menu/category_item.html
+++ b/app/visual_site_elements/templates/visual_site_elements/menu/category_item.html
@@ -1,5 +1,5 @@
 
-<li><a href="#">{{ category.title }}{% if category.get_children %}<span class="caret">{% endif %}</span></a>
+<li><a href="{{ category.get_absolute_url }}">{{ category.title }}{% if category.get_children %}<span class="caret">{% endif %}</span></a>
     {% if category.get_children %}
     <ul class="dropdown-menu">
 
