--- a/app/visual_site_elements/templates/visual_site_elements/promotions/promotions.html
+++ b/app/visual_site_elements/templates/visual_site_elements/promotions/promotions.html
@@ -1,6 +1,6 @@
 {% load get_promotion_thumbnail %}
 
-
+{% if object_list %}
 <!-- Start Promo section -->
 <section id="aa-promo">
     <div class="container">
@@ -35,5 +35,5 @@
     </div>
 </section>
 <!-- / Promo section -->
-
+{% endif %}
 
