--- a/app/visual_site_elements/templates/visual_site_elements/menu/category_item.html
+++ b/app/visual_site_elements/templates/visual_site_elements/menu/category_item.html
@@ -4,15 +4,21 @@
     <ul class="dropdown-menu">
 
         {% for child in category.get_children %}
-            <li><a href="{% url 'products:products' %}?category={{ child.title }}">{{ child.title }}</a></li>
+            {% if child.get_children %}
+                <li class="dropdown-submenu">
+                <a href="{% url 'products:products' %}?category={{ child.title }}">{{ child.title }}</a>
+                    <ul class="dropdown-menu">
+                        {% for second_child in child.get_children %}
+                            <li><a href="{% url 'products:products' %}?category={{ second_child.title }}">{{ second_child.title }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </li>
+            {% else %}
+                <li><a href="{% url 'products:products' %}?category={{ child.title }}">{{ child.title }}</a></li>
+            {% endif%}
         {% endfor %}
-
-        <li><a href="{% url 'products:products' %}?category={{ category.title }}">Tümü.. <span class="caret"></span></a>
-{#                <ul class="dropdown-menu">#}
-{#                    <li><a href="#">Sleep Wear</a></li>#}
-{#                    <li><a href="#">Sandals</a></li>#}
-{#                    <li><a href="#">Loafers</a></li>#}
-{#                </ul>#}
+        <li>
+            <a href="{% url 'products:products' %}?category={{ category.title }}">Tümü... <span class="caret"></span></a>
         </li>
 
     </ul>
