--- a/app/visual_site_elements/templates/visual_site_elements/menu/menu_items.html
+++ b/app/visual_site_elements/templates/visual_site_elements/menu/menu_items.html
@@ -30,7 +30,7 @@
 {#                                <li><a href="blog-single.html">Blog Single</a></li>#}
 {#                            </ul>#}
 {#                        </li>#}
-                        <li><a href="{% url 'contact' %}">İletişim</a></li>
+{#                        <li><a href="{% url 'contact' %}">İletişim</a></li>#}
 {#                        <li><a href="#">Pages <span class="caret"></span></a>#}
 {#                            <ul class="dropdown-menu">#}
 {#                                <li><a href="product.html">Shop Page</a></li>#}
