--- a/app/importer/templates/importer/product_importer.html
+++ b/app/importer/templates/importer/product_importer.html
@@ -33,6 +33,7 @@
 
     <form action="{{ file_upload_url }}" method="post" enctype="multipart/form-data">{% csrf_token %}
         {{ form|crispy }}
+        {{ importer_type_form }}
         <input type="submit" value="Upload File" />
     </form>
 
