--- a/app/importer/templates/importer/product_importer.html
+++ b/app/importer/templates/importer/product_importer.html
@@ -33,7 +33,10 @@
 
     <form action="{{ file_upload_url }}" method="post" enctype="multipart/form-data">{% csrf_token %}
         {{ form|crispy }}
-        {{ importer_type_form }}
+        {{ importer_type_form }}<hr>
+        {% if root_value_form %}
+            {{ root_value_form }}<hr>
+        {% endif %}
         <input type="submit" value="Upload File" />
     </form>
 
