Modal view 'da seçenekler getirildi, seçeneğe göre fiyat güncellendi. Sepete ekle butonu çalışır hale getirild.

--- a/app/carts/templates/carts/view.html
+++ b/app/carts/templates/carts/view.html
@@ -42,11 +42,11 @@
 
                     var message = "";
                     if (data.item_added) {
-                        message = "New item added"
+                        message = "Ürün sepetinize eklendi."
                     } else if (data.deleted) {
-                        message = "Item removed"
+                        message = "Ürün sepetten çıkarıldı."
                     } else {
-                        message = "Item updated"
+                        message = "Ürün adeti güncellendi."
                     }
                     showFlashMessage(message);
                     updateCartItemCount()
