nihayet data-importer xls ve xlsx dosyaları için çalışır hale getirildi.

--- a/app/importer/templates/importer/importer_list.html
+++ b/app/importer/templates/importer/importer_list.html
@@ -29,13 +29,7 @@
 
     <ul>
         <li>
-            <a href="{% url 'importer:xls_importer' %}">XLS Importer</a>
-        </li>
-        <li>
-            <a href="{% url 'importer:xlsx_importer' %}">XLSX Importer</a>
-        </li>
-        <li>
-            <a href="{% url 'importer:xml_importer' %}">XML Importer</a>
+            <p>Burada eskiden XLS, XLSX ve XML importer seçiyorduk. Artık bu sayfaya gerek yok.</p>
         </li>
     </ul>
 
