--- a/app/static_in_pro/static_for_istebu/css/custom.css
+++ b/app/static_in_pro/static_for_istebu/css/custom.css
@@ -1,3 +1,23 @@
 figure {
     margin: 1px;
 }
+
+/*.container-alert-flash {*/
+    /*position: absolute;*/
+    /*top: 10px;*/
+    /*z-index: 50000;*/
+    /*width: 100%;*/
+    /*right: 0%;*/
+    /*margin: 0px;*/
+    /*display: none;*/
+/*}*/
+
+.container-alert-flash {
+    position: fixed;
+    top: 25%;
+    z-index: 50000;
+    width: 100%;
+    right: 25%;
+    margin: 0px;
+    display: none;
+}
