--- a/app/visual_site_elements/templates/visual_site_elements/menu/category_item.html
+++ b/app/visual_site_elements/templates/visual_site_elements/menu/category_item.html
@@ -18,7 +18,7 @@
             {% endif%}
         {% endfor %}
         <li>
-            <a href="{% url 'products:products' %}?category={{ category.title }}">Tümü... <span class="caret"></span></a>
+            <a href="{% url 'products:products' %}?category={{ category.title }}">Tüm Ürünler<span class="caret"></span></a>
         </li>
 
     </ul>
