--- a/app/static_in_pro/static_for_istebu/css/custom.css
+++ b/app/static_in_pro/static_for_istebu/css/custom.css
@@ -21,3 +21,25 @@ figure {
     margin: 0px;
     display: none;
 }
+
+
+#aa-product .aa-product-area .aa-product-inner #one-cikanlar {
+    text-align: center;
+    padding-bottom: 35px;
+}
+
+#aa-product .aa-product-area .aa-product-inner #firsat {
+    text-align: center;
+    padding-bottom: 35px;
+}
+
+#aa-product .aa-product-area .aa-product-inner #kampanya {
+    text-align: center;
+    padding-bottom: 35px;
+}
+
+#aa-product .aa-product-area .aa-product-inner #cok-satan {
+    text-align: center;
+    padding-bottom: 35px;
+}
+
